--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,14 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+
+    <dimen name="common_text_size">16dp</dimen>
+    <dimen name="common_text_head_size">14dp</dimen>
+    <dimen name="common_text_padding6">6dp</dimen>
+    <dimen name="common_text_padding12">12dp</dimen>
+    <dimen name="common_text_padding24">6dp</dimen>
+
+    <dimen name="common_wrapper">36dp</dimen>
+    <dimen name="common_head_wrapper">32dp</dimen>
 </resources>
