--- a/app/src/main/res/layout/categories_item.xml
+++ b/app/src/main/res/layout/categories_item.xml
@@ -9,5 +9,6 @@
         android:layout_width="match_parent"
         android:padding="@dimen/common_text_padding12"
         android:textSize="@dimen/common_text_size"
+        android:textColor="#000000"
         android:layout_height="wrap_content" />
 </LinearLayout>
