--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,8 +8,8 @@
     <dimen name="fab_margin">16dp</dimen>
 
 
-    <dimen name="common_text_size">16dp</dimen>
-    <dimen name="common_text_head_size">14dp</dimen>
+    <dimen name="common_text_size">16sp</dimen>
+    <dimen name="common_text_head_size">14sp</dimen>
     <dimen name="common_text_padding6">6dp</dimen>
     <dimen name="common_text_padding12">12dp</dimen>
     <dimen name="common_text_padding24">6dp</dimen>
